# rETL

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cargo.toml  check-unused-deps.sh  create_framework_crate.sh  junit.xml  lcov-conform.info  lcov-extract.info  lcov-load.info  lcov-transform.info  lcov.info  pyproject.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: auto-approve.yml  ci-full.yml  ci-pr.yml  ci.yml
archived_data_profiler/: Cargo.toml
components/conform/: Cargo.toml
components/conform/src/: lib.rs
components/data-profiler/: Cargo.toml  README.md
components/data-profiler/data/examples/: sample.parquet
components/data-profiler/src/: cli.rs  main.rs  pipeline.rs  profiler.rs
components/extract/: Cargo.toml
components/extract/data/examples/: malformed.csv  sample.avro  sample.csv  sample.json  sample.orc
components/extract/src/: lib.rs
components/load/: Cargo.toml
components/load/src/: lib.rs
components/transform/: Cargo.toml
components/transform/src/: lib.rs
dags/: synapse_to_parquet_dag.py
infra/helm/retl-orchestration/: values.yaml
infra/helm/retl-orchestration/templates/: _helpers.tpl
python-orchestration/: pyproject.toml
python-orchestration/dags/: __init__.py  synapse_to_parquet_flow.py
python-orchestration/infra/helm/retl-orchestration/: Chart.yaml
python-orchestration/infra/helm/retl-orchestration/templates/: serviceaccount.yaml
python-orchestration/scripts/: __init__.py  run_copy.py
python-orchestration/tests/: test_secrets.py
python-orchestration/utils/: secrets.py
rust-core/components/conform/: Cargo.toml
rust-core/components/extract/data/examples/: sample.json  sample.txt  sample.xlsx
rust-core/components/extract/src/: lib.rs
rust-core/components/transform/: Cargo.toml
sqldb/: Cargo.toml
sqldb/src/: config.rs  lib.rs
tests/: test_run_copy.py
