[package]
name = "sqldb"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.1", features = ["sqlite", "migrate", "macros", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }
