[package]
name = "data-profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.46", default-features = false, features = ["csv", "json", "parquet"]  }
clap = { version = "4.4", features = ["derive"] }