[package]
name = "extract"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.48", features = ["lazy", "csv", "json", "parquet"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
flexi_logger = "0.30.1"

# New dependencies for extended format and HTTP support
calamine = "0.26.1"
apache-avro = "0.18.0"
orc-format = "0.3.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.45", features = ["rt", "macros"] }
serde_json = "1.0"
async-trait = "0.1.88"
thiserror = "2.0.12"

[dev-dependencies]
logtest = "2.0.0"
insta = "1.43.1"
